--- a/client/app/account/controllers/createPassword.html
+++ b/client/app/account/controllers/createPassword.html
@@ -5,12 +5,10 @@
         <section>
             <div class="row">
                 <div class="col-sm-offset-1 col-sm-10">
-                    <h1> Create your Password</h1>
-                    <div class="alert alert-info top-margin10">Please create a Password for your account.
-                        <strong>The email address you provided to begin this enrollment is your Username.</strong>
-                        Remember your Username
-                        and Password.
-                        You will need them to log in to your account.
+                    <h1> {{"PASSWORD.CREATE_CONTENTS_14" | translate}}</h1>
+                    <div class="alert alert-info top-margin10">{{"PASSWORD.CREATE_CONTENTS_8" | translate}}
+                        <strong>{{"PASSWORD.CREATE_CONTENTS_9" | translate}}</strong>
+                        {{"PASSWORD.CREATE_CONTENTS_10" | translate}}
                     </div>
                 </div>
             </div>
