--- a/client/app/account/controllers/forgotPassword.html
+++ b/client/app/account/controllers/forgotPassword.html
@@ -1,7 +1,7 @@
 <div id="wrapper" class="container-fluid page-bg-white">
     <script type="text/ng-template" id="forgot-password-messages">
-        <div ng-message="required">Please complete this required fields.</div>
-        <div ng-message="email">The email address you have provided must be valid, please try again.</div>
+        <div ng-message="required">{{"PASSWORD.FORGOT_CONTENTS_1" | translate}}</div>
+        <div ng-message="email">{{"PASSWORD.FORGOT_CONTENTS_2" | translate}}</div>
     </script>
 
     <c2s-unsecure-top-navbar title="forgotPasswordVm.title"></c2s-unsecure-top-navbar>
@@ -10,10 +10,10 @@
         <section>
             <div class="row">
                 <div class="col-sm-offset-1 col-sm-10">
-                    <h1>Forgot your password?</h1>
+                    <h1>{{"PASSWORD.FORGOT_CONTENTS_3" | translate}}</h1>
                     <div class="alert alert-info">
-                        Please enter the <b>Email</b> you use to sign in to your account. All information must match the
-                        information used to create this account.
+                        {{"PASSWORD.FORGOT_CONTENTS_4" | translate}} <b>{{"PASSWORD.FORGOT_CONTENTS_5" | translate}}</b>
+                        {{"PASSWORD.FORGOT_CONTENTS_6" | translate}}
                     </div>
                 </div>
             </div>
@@ -23,11 +23,11 @@
                         <fieldset class="">
                             <div class="form-group wrap">
                                 <div>
-                                    <label for="email">Email</label>
+                                    <label for="email">{{"PASSWORD.FORGOT_CONTENTS_5" | translate}}</label>
                                     <div class="row">
                                         <div class="col-xs-8 col-sm-5 col-md-4 col-lg-3 m-b-xs">
                                             <input id="email" name="email" class="form-control" type="text"
-                                                   placeholder="Email"
+                                                   placeholder="{{'PASSWORD.FORGOT_CONTENTS_5' | translate}}"
                                                    ng-model="forgotPasswordVm.user.email" c2s-validate-email required/>
                                             <div class="text-alert" ng-messages="forgotPasswordForm.email.$error"
                                                  ng-if="forgotPasswordForm.email.$dirty">
@@ -41,24 +41,24 @@
                             <div class="row">
                                 <div class="col-sm-10 text-alert m-t-n-xs m-b-xs"
                                      ng-if="forgotPasswordVm.emailPatternError">
-                                    <span>Please provide a valid email address.</span>
+                                    <span>{{"PASSWORD.FORGOT_CONTENTS_7" | translate}}</span>
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="col-sm-10 text-alert m-t-n-xs m-b-xs"
                                      ng-if="forgotPasswordVm.emailNotFound">
-                                    <span>The email address you have provided cannot be found, please try again.</span>
+                                    <span>{{"PASSWORD.FORGOT_CONTENTS_8" | translate}}</span>
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <div class="col-sm-12 m-t-sm">
                                     <button type="button" class="btn btn-white m-r"
-                                            ng-click="forgotPasswordVm.cancel()">Cancel
+                                            ng-click="forgotPasswordVm.cancel()">{{"PASSWORD.FORGOT_CONTENTS_9" | translate}}
                                     </button>
                                     <a class="btn btn-primary dark-green" ng-click="forgotPasswordVm.forgotPassword()"
-                                       ng-disabled="!forgotPasswordVm.canSubmit(forgotPasswordForm)">Submit
+                                       ng-disabled="!forgotPasswordVm.canSubmit(forgotPasswordForm)">{{"PASSWORD.CREATE_CONTENTS_7" | translate}}
                                     </a>
                                 </div>
                             </div>
