--- a/client/app/account/controllers/resetPasswordSuccess.html
+++ b/client/app/account/controllers/resetPasswordSuccess.html
@@ -4,12 +4,11 @@
 
         <div class="row">
             <div class="col-sm-offset-1 col-sm-10">
-                <h1>Reset Password Complete!</h1>
+                <h1>{{"PASSWORD.RESET_CONTENTS_1" | translate}}</h1>
                 <div class="m-t-md">
-                    You have successfully submitted a request to create a new password. You will be receiving an email
-                    from us.
+                    {{"PASSWORD.RESET_CONTENTS_2" | translate}}
                     <br>
-                    <b>Please click on the link provided in the email.</b>
+                    <b>{{"PASSWORD.RESET_CONTENTS_3" | translate}}</b>
 
                 </div>
             </div>
@@ -18,7 +17,7 @@
         <div class="row">
             <div class="col-sm-offset-1 col-sm-10 m-t-md">
                 <a class="btn btn-primary dark-green" ui-sref="fe.login">
-                    Continue to Login Page
+                    {{"PASSWORD.RESET_CONTENTS_4" | translate}}
                 </a>
             </div>
         </div>
