--- a/client/app/account/controllers/userAccountVerification.html
+++ b/client/app/account/controllers/userAccountVerification.html
@@ -4,11 +4,10 @@
         <section>
             <div class="row">
                 <div class="col-sm-offset-1 col-sm-10">
-                    <h1> Account Setup Verification</h1>
+                    <h1> {{"USER_ACCOUNT_VERIFICATION.CONTENTS_1" | translate}}</h1>
                     <div class="alert alert-info">
-                        To begin setting up your personal account, please enter your <b>Date of Birth</b> and the <b>Verification
-                        Code</b> that was provided to you.
-                        All fields are required in order to proceed.
+                        {{"USER_ACCOUNT_VERIFICATION.CONTENTS_2" | translate}} <b>{{"USER_ACCOUNT_VERIFICATION.CONTENTS_3" | translate}}</b> {{"USER_ACCOUNT_VERIFICATION.CONTENTS_4" | translate}} <b>
+                        {{"USER_ACCOUNT_VERIFICATION.CONTENTS_5" | translate}}</b> {{"USER_ACCOUNT_VERIFICATION.CONTENTS_6" | translate}}
                     </div>
                 </div>
             </div>
