--- a/client/app/account/directives/createPassword.html
+++ b/client/app/account/directives/createPassword.html
@@ -1,37 +1,36 @@
 <div class="row">
     <script type="text/ng-template" id="activation-messages">
-        <div ng-message="required">Please complete this required field.</div>
-        <div ng-message="compareTo">Your password and confirm password must match, please try again.</div>
-        <div ng-message="isValidPassword">The password entered is not valid, see the Password Instructions and try
-            again.
+        <div ng-message="required">{{"PASSWORD.CREATE_CONTENTS_11" | translate}}</div>
+        <div ng-message="compareTo">{{"PASSWORD.CREATE_CONTENTS_12" | translate}}</div>
+        <div ng-message="isValidPassword">{{"PASSWORD.CREATE_CONTENTS_13" | translate}}
         </div>
     </script>
 
     <div class="col-sm-offset-1 col-sm-10">
         <form class="" name="createPasswordForm" method="post">
             <fieldset class="">
-                <legend class="sr-only">Create password</legend>
+                <legend class="sr-only">{{"PASSWORD.CREATE_CONTENTS_1" | translate}}</legend>
 
                 <div class="form-group">
-                    <label class="control-label" for="user_name">Username</label>
+                    <label class="control-label" for="user_name">{{"PASSWORD.CREATE_CONTENTS_2" | translate}}</label>
                     <div class="row">
                         <div class="col-sm-6 col-md-5 col-lg-4">
                             <input id="user_name"
                                    name="username"
                                    type="text"
                                    aria-required="true"
-                                   class="form-control bold" placeholder="username"
+                                   class="form-control bold" placeholder="{{'PASSWORD.CREATE_CONTENTS_2' | translate}}"
                                    ng-model="createPasswordVm.username" readonly/>
                         </div>
                     </div>
                 </div>
 
                 <div class="form-group wrap">
-                    <label class="relative" for="password">Password</label>
+                    <label class="relative" for="password">{{"PASSWORD.CREATE_CONTENTS_3" | translate}}</label>
                     <div class="row">
                         <div class="col-sm-6 col-md-5 col-lg-4">
                             <input id="password" type="password" class="form-control relative" name="password"
-                                   placeholder="Password" ng-model="createPasswordVm.patient.password"
+                                   placeholder="{{'PASSWORD.CREATE_CONTENTS_3' | translate}}" ng-model="createPasswordVm.patient.password"
                                    c2s-validate-password required>
                             <span class="text-strong-blue absolute hidden-xs" style="top: 4px; right: 0px;">
                                     <c2s-popover popover-placement="right"
@@ -54,14 +53,14 @@
                     </div>
                 </div>
                 <div class="form-group wrap m-b">
-                    <label for="reenterPassword">Re-enter Password</label>
+                    <label for="reenterPassword">{{"PASSWORD.CREATE_CONTENTS_4" | translate}}</label>
                     <div class="row">
                         <div class="col-sm-6 col-md-5 col-lg-4">
                             <input id="reenterPassword"
                                    type="password"
                                    class="form-control"
                                    name="confirmPassword"
-                                   placeholder="Confirm password"
+                                   placeholder="{{'PASSWORD.CREATE_CONTENTS_15' | translate}}"
                                    ng-model="createPasswordVm.patient.confirmPassword"
                                    c2s-compare-to="createPasswordVm.patient.password" required>
                             <div class="text-alert m-t-xs"
@@ -75,19 +74,19 @@
 
                 <div class="row">
                     <div class="col-sm-10 text-alert m-t-n-xs m-b-xs" ng-if="createPasswordVm.activateError">
-                        <span>Whoops! Something went wrong. Please try again later.</span>
+                        <span>{{"PASSWORD.CREATE_CONTENTS_5" | translate}}</span>
                     </div>
                 </div>
 
                 <div class="form-group m-t-md">
                     <div class="col-sm-12">
                         <button type="button" class="btn btn-default m-r-sm"
-                                ng-click="createPasswordVm.clearField(createPasswordForm)">Clear
+                                ng-click="createPasswordVm.clearField(createPasswordForm)">{{"PASSWORD.CREATE_CONTENTS_6" | translate}}
                         </button>
                         <button type="button" class="btn btn-primary dark-green"
                                 ng-click="createPasswordVm.activate()"
                                 ng-disabled="!createPasswordVm.canActivate(createPasswordForm)">
-                            Submit
+                            {{"PASSWORD.CREATE_CONTENTS_7" | translate}}
                         </button>
                     </div>
                 </div>
