--- a/client/app/account/directives/verification.html
+++ b/client/app/account/directives/verification.html
@@ -1,16 +1,16 @@
 <div class="row">
     <script type="text/ng-template" id="verification-messages">
-        <div ng-message="required">Please complete this required fields.</div>
-        <div class="m-t-n-xs m-b-xs" ng-message="isAfterToday">Date of birth cannot be today's date, or a future date.
+        <div ng-message="required">{{"USER_ACCOUNT_VERIFICATION.CONTENTS_7" | translate}}</div>
+        <div class="m-t-n-xs m-b-xs" ng-message="isAfterToday">{{"USER_ACCOUNT_VERIFICATION.CONTENTS_8" | translate}}
         </div>
     </script>
 
     <div class="col-sm-offset-1 col-sm-10">
         <form class="" name="verificationForm">
             <fieldset class="">
-                <legend class="sr-only">Account Setup Verification</legend>
+                <legend class="sr-only">{{"USER_ACCOUNT_VERIFICATION.CONTENTS_1" | translate}}</legend>
                 <div class="form-group wrap">
-                    <label for="birthdate">Date of Birth</label>
+                    <label for="birthdate">{{"USER_ACCOUNT_VERIFICATION.CONTENTS_3" | translate}}</label>
                     <div class="row">
                         <div class="col-xs-12">
                             <c2s-multi-select-date
@@ -26,7 +26,7 @@
                                 <span ng-messages-include="verification-messages"></span>
                             </div>
                             <div class="m-t-n-xs text-alert" ng-if="verificationVm.fillOutDate">
-                                <span>Please complete all required fields to continue.</span>
+                                <span>{{"USER_ACCOUNT_VERIFICATION.CONTENTS_9" | translate}}</span>
                             </div>
                         </div>
                     </div>
@@ -34,13 +34,13 @@
 
                 <div class="form-group wrap">
                     <div>
-                        <label for="verificationCode">Verification Code</label>
-                        <span class="m-l-xs font-light text-navbar-blueGray">(Verification Code is case sensitive)</span>
+                        <label for="verificationCode">{{"USER_ACCOUNT_VERIFICATION.CONTENTS_5" | translate}}</label>
+                        <span class="m-l-xs font-light text-navbar-blueGray">{{"USER_ACCOUNT_VERIFICATION.CONTENTS_10" | translate}}</span>
 
                         <div class="row">
                             <div class="col-xs-8 col-sm-5 col-md-4 col-lg-3 m-b-xs">
                                 <input id="verificationCode" name="verificationCode" class="form-control" type="text"
-                                       placeholder="Verification Code"
+                                       placeholder="{{'USER_ACCOUNT_VERIFICATION.CONTENTS_5' | translate}}"
                                        ng-model="verificationVm.verifyInfo.verificationCode" required/>
                                 <div class="text-alert" ng-messages="verificationForm.verificationCode.$error"
                                      ng-if="verificationForm.verificationCode.$dirty">
@@ -53,17 +53,17 @@
 
                 <div class="row">
                     <div class="col-sm-10 text-alert m-t-n-xs m-b-xs" ng-if="verificationVm.verifyError">
-                        <span>Sorry, the Date of Birth and/or Verification Code entered does not match, please try again.</span>
+                        <span>{{"USER_ACCOUNT_VERIFICATION.CONTENTS_11" | translate}}</span>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-sm-12 m-t-sm">
                         <button type="button" class="btn btn-default m-r-sm"
-                                ng-click="verificationVm.clearField(verificationForm)">Clear
+                                ng-click="verificationVm.clearField(verificationForm)">{{"USER_ACCOUNT_VERIFICATION.CONTENTS_12" | translate}}
                         </button>
                         <a class="btn btn-primary dark-green" ng-click="verificationVm.verify()"
-                           ng-disabled="!verificationVm.canVerify(verificationForm)">Continue
+                           ng-disabled="!verificationVm.canVerify(verificationForm)">{{"USER_ACCOUNT_VERIFICATION.CONTENTS_13" | translate}}
                         </a>
                     </div>
                 </div>
