--- a/client/app/consent/controllers/consentCreateEdit.html
+++ b/client/app/consent/controllers/consentCreateEdit.html
@@ -1,4 +1,4 @@
-<c2s-content-wrapper contenttitle="Create Consent">
+<c2s-content-wrapper contenttitle="TITLE.CREATE_CONSENT">
     <c2s-consent-create
             providers="consentCreateEditVm.providers"
             purposeofuse="consentCreateEditVm.purposeOfUse"
