--- a/client/app/consent/directives/consentCreateEditCancelModal.html
+++ b/client/app/consent/directives/consentCreateEditCancelModal.html
@@ -1,17 +1,17 @@
 <div class="inmodal">
     <div class="modal-header">
-        <h4 class="modal-title">Discard Changes</h4>
+        <h4 class="modal-title">{{"CONSENT_MANAGEMENT.CONSENT_CREATE_CANCEL_1" | translate}}</h4>
     </div>
     <div class="modal-body">
         <div>
-            <h3 class="text-center">Are you sure that you want to discard changes for this consent?</h3>
+            <h3 class="text-center">{{"CONSENT_MANAGEMENT.CONSENT_CREATE_CANCEL_2" | translate}}</h3>
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-white m-r-xs" ng-click="CancelCreateEditConsentModalVm.cancel()">Cancel
+        <button type="button" class="btn btn-white m-r-xs" ng-click="CancelCreateEditConsentModalVm.cancel()">{{"CONSENT_MANAGEMENT.CONSENT_CREATE_3" | translate}}
         </button>
-        <button type="button" class="btn btn-primary" ng-click="CancelCreateEditConsentModalVm.discard()">Discard
-            Changes
+        <button type="button" class="btn btn-primary" ng-click="CancelCreateEditConsentModalVm.discard()">
+            {{"CONSENT_MANAGEMENT.CONSENT_CREATE_CANCEL_1" | translate}}
         </button>
     </div>
 </div>
