--- a/client/app/consent/directives/consentListManageOptionsModalError.html
+++ b/client/app/consent/directives/consentListManageOptionsModalError.html
@@ -4,8 +4,8 @@
                                   cancel="manageConsentModalVm.cancel()"></c2s-consent-modal-header>
     </div>
     <div class="modal-body">
-        <div class="alert alert-danger"><strong>ERROR:</strong> Invalid consent state. Please contact to system
-            administrator.
+        <div class="alert alert-danger"><strong>{{"CONSENT_MANAGEMENT.CONSENT_LIST_ERROR_1" | translate}}</strong>
+            {{"CONSENT_MANAGEMENT.CONSENT_LIST_ERROR_2" | translate}}
         </div>
     </div>
 </div>
