--- a/client/app/consent/directives/consentModalHeader.html
+++ b/client/app/consent/directives/consentModalHeader.html
@@ -1,3 +1,3 @@
 <button type="button" class="close" ng-click="consentModalHeaderVm.cancel()" aria-hidden="true">X</button>
-<h2 class="modal-title" ng-if="consentModalHeaderVm.option === 'manageConcent'">Consent Options</h2>
-<h2 class="modal-title" ng-if="consentModalHeaderVm.option === 'tryMyPolicy'">Apply My Record</h2>
+<h2 class="modal-title" ng-if="consentModalHeaderVm.option === 'manageConcent'">{{"CONSENT_MANAGEMENT.OPTIONS_10" | translate}}</h2>
+<h2 class="modal-title" ng-if="consentModalHeaderVm.option === 'tryMyPolicy'">{{"CONSENT_MANAGEMENT.OPTIONS_11" | translate}}</h2>
