--- a/client/app/consent/directives/consentProviderSelect.html
+++ b/client/app/consent/directives/consentProviderSelect.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default" ng-click="consentSelectProviderVm.openSelectProviderModal()">
     <div class="panel-heading">
-        <div ng-bind="consentSelectProviderVm.fieldplaceholder"></div>
+        <div ng-bind="consentSelectProviderVm.fieldplaceholder | translate"></div>
     </div>
     <div class="panel-body">
         <div class="m-l" ng-if="consentSelectProviderVm.selectedProvider.npi">
