--- a/client/app/consent/directives/consentPurposeOfUse.html
+++ b/client/app/consent/directives/consentPurposeOfUse.html
@@ -1,14 +1,14 @@
 <div>
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h2> Purpose of Use</h2>
+            <h2>{{"CONSENT_MANAGEMENT.CONSENT_PURPOSE_1" | translate}}</h2>
         </div>
         <div class="panel-body">
-            <p>Choose for what purposes your medical information may be used.</p>
+            <p>{{"CONSENT_MANAGEMENT.CONSENT_PURPOSE_2" | translate}}</p>
             <p>
-                <span class="m-r-sm"><strong>SHARE</strong> my medical record ONLY for the selected purposes of use.</span>
+                <span class="m-r-sm"><strong>{{"CONSENT_MANAGEMENT.CONSENT_MEDICAL_INFO_6" | translate}}</strong>{{"CONSENT_MANAGEMENT.CONSENT_PURPOSE_3" | translate}}</span>
                 <button type="button" class="btn btn-primary btn-xs dark-green"
-                        ng-click="consentPurposeOfUseVm.openSelectPurposeModal()">Edit
+                        ng-click="consentPurposeOfUseVm.openSelectPurposeModal()">{{"CONSENT_MANAGEMENT.CONSENT_PURPOSE_4" | translate}}
                 </button>
             </p>
             <div>
