--- a/client/app/consent/directives/consentTerm.html
+++ b/client/app/consent/directives/consentTerm.html
@@ -1,10 +1,10 @@
 <div>
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h2> Consent Term</h2>
+            <h2>{{"CONSENT_MANAGEMENT.CONSENT_TERM_1" | translate}}</h2>
         </div>
         <div class="panel-body">
-            <p>Enter a start and end date during wich your medical records will be shared.</p>
+            <p>{{"CONSENT_MANAGEMENT.CONSENT_TERM_2" | translate}}</p>
             <c2s-datepicker-range
                     class="input-daterange"
                     ng-model="consentTermVm.daterange"
