--- a/client/app/medicalDocuments/controllers/medicalDocument.html
+++ b/client/app/medicalDocuments/controllers/medicalDocument.html
@@ -1,4 +1,4 @@
-<c2s-content-wrapper contenttitle="Upload Medical Documents">
+<c2s-content-wrapper contenttitle="TITLE.UPLOAD_MEDICAL_DOC">
     <div class="row">
         <c2s-medical-documents-upload></c2s-medical-documents-upload>
         <c2s-uploaded-documents
