--- a/client/app/medicalDocuments/controllers/medicalDocumentInfo.html
+++ b/client/app/medicalDocuments/controllers/medicalDocumentInfo.html
@@ -1,10 +1,9 @@
-<c2s-content-wrapper contenttitle="Manage My Medical Information">
+<c2s-content-wrapper contenttitle="TITLE.MANAGE_MY_MED_INFO">
     <div class="row">
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
-                <div class="bold font-size16 m-t-xs m-b-sm">Medical Document Management</div>
-                <p>Choose to upload your electronic Medical Documents. Or you may enter your medical information
-                    manually.</p>
+                <div class="bold font-size16 m-t-xs m-b-sm">{{"MEDICAL_DOC_MANAGEMENT.CONTENTS_1" | translate}}</div>
+                <p>{{"MEDICAL_DOC_MANAGEMENT.CONTENTS_2" | translate}}</p>
             </div>
         </div>
     </div>
@@ -12,20 +11,19 @@
         <div class="col-sm-12">
             <div class="ibox float-e-margins margin-bottom-10">
                 <p>
-                    If you have electronic versions of your Medical Records, you may upload them here.
+                    {{"MEDICAL_DOC_MANAGEMENT.CONTENTS_3" | translate}}
                 </p>
                 <p class="m-b-md">
                     <a class="btn btn-primary dark-green" ui-sref="fe.medicaldocuments.upload">
-                        Upload Medical Documents
+                        {{"MEDICAL_DOC_MANAGEMENT.CONTENTS_4" | translate}}
                     </a>
                 </p>
                 <p class="m-t">
-                    If you do not have an existing electronic Medical Record, you may manually enter your medical
-                    information here.
+                    {{"MEDICAL_DOC_MANAGEMENT.CONTENTS_5" | translate}}
                 </p>
                 <p class="m-b-md">
                     <a class="btn btn-primary dark-green" disabled>
-                        Manually Enter Medical Documents
+                        {{"MEDICAL_DOC_MANAGEMENT.CONTENTS_6" | translate}}
                     </a>
                 </p>
             </div>
