--- a/client/app/account/directives/topNavbar.html
+++ b/client/app/account/directives/topNavbar.html
@@ -4,7 +4,7 @@
             <div class="col-sm-12">
                 <div class="navbar-header">
                     <div class="m-t-md m-l inline">
-                        <p><span ng-bind="topNavbarVm.title"></span></p>
+                        <p><span ng-bind="(topNavbarVm.title | translate)"></span></p>
                     </div>
                 </div>
                 <div class="pull-right">
@@ -14,6 +14,20 @@
                     <div class="m-t-xs m-r inline">
                         <img src="assets/img/c2s.png" alt="c2s logo">
                     </div>
+                    &nbsp;
+                    <!--Select language - add by Wentao-->
+                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span translate="SELECT_LANGUAGE"></span><span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li>
+                            <a ng-click="topNavbarVm.changeLanguage('en-US')" translate="BUTTON_LANG_EN"></a>
+                        </li>
+                        <li>
+                            <a ng-click="topNavbarVm.changeLanguage('zh-CN')" translate="BUTTON_LANG_ZH"></a>
+                        </li>
+                        <li>
+                            <a ng-click="topNavbarVm.changeLanguage('es-AR')" translate="BUTTON_LANG_ES"></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
