--- a/client/app/activity/controllers/activityHistory.html
+++ b/client/app/activity/controllers/activityHistory.html
@@ -1,3 +1,3 @@
-<c2s-content-wrapper contenttitle="Activity History">
+<c2s-content-wrapper contenttitle="ACTIVITY_HISTORY">
     <c2s-activity activities-data="activityHistoryVm.paginationData"></c2s-activity>
 </c2s-content-wrapper>
