--- a/client/app/activity/directives/activity.html
+++ b/client/app/activity/directives/activity.html
@@ -3,21 +3,21 @@
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <div class="panel-title">Activity History</div>
+                    <div class="panel-title">{{"ACTIVITY_HISTORY" | translate}}</div>
                 </div>
                 <div class="panel-body">
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                         <tr>
-                            <th>Date</th>
-                            <th>Action</th>
-                            <th>Type</th>
-                            <th>Changed by</th>
+                            <th>{{"ACTIVITY.DATE" | translate}}</th>
+                            <th>{{"ACTIVITY.ACTION" | translate}}</th>
+                            <th>{{"ACTIVITY.TYPE" | translate}}</th>
+                            <th>{{"ACTIVITY.CHANGED_BY" | translate}}</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr ng-repeat="activity in activityVm.activities">
-                            <td><span ng-bind="activity.changedDateTime"></span></td>
+                            <td><span ng-bind="(activity.changedDateTime | date)"></span></td>
                             <td><span ng-bind="activity.recType"></span></span></td>
                             <td><span ng-bind="activity.type"></span></span></td>
                             <td><span ng-bind="activity.changedBy"></span></span></td>
