--- a/client/app/consent/controllers/consentESignature.html
+++ b/client/app/consent/controllers/consentESignature.html
@@ -1,3 +1,3 @@
-<c2s-content-wrapper contenttitle="eSignature">
+<c2s-content-wrapper contenttitle="TITLE.ESIGNATURE">
     <c2s-consent-e-signature attestation="consentESignatureVm.attestation"></c2s-consent-e-signature>
 </c2s-content-wrapper>
