--- a/client/app/consent/controllers/consentRevoke.html
+++ b/client/app/consent/controllers/consentRevoke.html
@@ -1,3 +1,3 @@
-<c2s-content-wrapper contenttitle="Revoke Consent">
+<c2s-content-wrapper contenttitle="TITLE.REVOKE_CONSENT">
     <c2s-consent-revoke></c2s-consent-revoke>
 </c2s-content-wrapper>
