--- a/client/app/consent/directives/consentCard.html
+++ b/client/app/consent/directives/consentCard.html
@@ -8,21 +8,21 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-4 col-sm-push-8 col-xs-12">
-                        <p class="">Effective Dates: <strong><span
+                        <p class="">{{"CONSENT_PROPERTY.PROPERTIES_1" | translate}}<strong><span
                                 ng-bind="(consentCardVm.consent.consentStart | date) + ' - ' + (consentCardVm.consent.consentEnd | date)"></span></strong>
                         </p>
                     </div>
                     <div class="col-sm-8 col-sm-pull-4 col-xs-12">
                         <div class="row">
                             <div class="col-sm-6">
-                                <p class="m-b-xxs">Authorized to share:
+                                <p class="m-b-xxs">{{"CONSENT_PROPERTY.PROPERTIES_2" | translate}}
                                 </p>
                                 <p><strong><span ng-repeat="discloseName in consentCardVm.consent.toDiscloseName"
                                                  ng-bind="discloseName"></span></strong>
                                 </p>
                             </div>
                             <div class="col-sm-6">
-                                <p class="m-b-xxs">Sharing with:</p>
+                                <p class="m-b-xxs">{{"CONSENT_PROPERTY.PROPERTIES_3" | translate}}</p>
                                 <p><strong><span ng-repeat="madeToName in consentCardVm.consent.isMadeToName"
                                                  ng-bind="madeToName"></span></strong>
                                 </p>
@@ -36,13 +36,13 @@
                     <div class="col-md-6 m-b">
                         <div ng-if="consentCardVm.isShareAll()">
                             <div class="font-size16 bold m-b-sm border-bottom-blue"><span class="m-r-xs"><i
-                                    class="fa fa-eye"></i></span>Sharing all medical information:
+                                    class="fa fa-eye"></i></span>{{"CONSENT_SHARING.OPTIONS_1" | translate}}
                             </div>
-                            All my medical information can be shared.
+                            {{"CONSENT_SHARING.OPTIONS_1_CONTENT" | translate}}
                         </div>
                         <div ng-if="!consentCardVm.isShareAll()">
                             <div class="font-size16 bold m-b-sm border-bottom-red"><span class="m-r-xs"><i
-                                    class="fa fa-eye-slash"></i></span>Medical Information NOT disclosed:
+                                    class="fa fa-eye-slash"></i></span>{{"CONSENT_SHARING.OPTIONS_2" | translate}}
                             </div>
 
                             <p><span ng-bind="consentCardVm.notDisclosedItems()"></span></p>
@@ -50,7 +50,7 @@
                     </div>
                     <div class="col-md-6 m-b">
                         <div class="font-size16 bold m-b-sm border-bottom-blue"><span class="m-r-xs"><i
-                                class="fa fa-eye"></i></span>Share for following purposes:
+                                class="fa fa-eye"></i></span>{{"CONSENT_SHARING.OPTIONS_3" | translate}}
                         </div>
                         <p><span ng-bind="consentCardVm.purposeOfUseItems()"></span></p>
                     </div>
@@ -61,12 +61,11 @@
                     <div class="col-xs-12">
                         <div class="left-padding25"
                              ng-class="{'statusIcon_saved': consentCardVm.consentState('In Progress'),'statusIcon_signed': consentCardVm.consentState('Signed'),'statusIcon_revoked': consentCardVm.consentState('Revoked')}">
-                            <span> Consent State: <span class="bold"
-                                                        ng-bind="consentCardVm.consentState('') | uppercase"></span></span>
+                            <span> {{"CONSENT_STATE" | translate}} <span class="bold"
+                                                        ng-bind="(consentCardVm.consentState('') | uppercase) | translate"></span></span>
                             <span class="pull-right">
                                 <button class="btn btn-primary btn-xs dark-green" type="button"
-                                        ng-click="consentCardVm.openManageConsentModal()">Manage
-                                    Consent
+                                        ng-click="consentCardVm.openManageConsentModal()">{{"CONSENT_MANAGEMENT.OPTIONS_12" | translate}}
                                 </button>
                             </span>
                         </div>
