--- a/client/app/consent/directives/consentListManageOptionsModalSaved.html
+++ b/client/app/consent/directives/consentListManageOptionsModalSaved.html
@@ -6,23 +6,22 @@
         </div>
         <div class="modal-body">
             <div ng-if="manageConsentModalVm.option === 'manageConcent'">
-                <h3>I want to:</h3>
+                <h3>{{"CONSENT_MANAGEMENT.OPTIONS" | translate}}</h3>
                 <div class="list-group">
                     <a href="#" class="list-group-item" ng-click="manageConsentModalVm.edit()">
-                        <h4><i class="fa fa-edit fa-lg m-r-sm"></i>Edit This Consent</h4>
+                        <h4><i class="fa fa-edit fa-lg m-r-sm"></i>{{"CONSENT_MANAGEMENT.OPTIONS_5" | translate}}</h4>
                     </a>
                     <a href="#" class="list-group-item" ng-click="manageConsentModalVm.downloadUnattestedConsent('unsigned')">
-                        <h4><i class="fa fa-search fa-lg m-r-sm"></i>Preview This Consent</h4>
+                        <h4><i class="fa fa-search fa-lg m-r-sm"></i>{{"CONSENT_MANAGEMENT.OPTIONS_6" | translate}}</h4>
                     </a>
                     <a href="#" class="list-group-item" ng-click="manageConsentModalVm.viewAttestation()">
-                        <h4><i class="fa fa-mail-forward fa-lg m-r-sm"></i>Provide eSignature</h4>
+                        <h4><i class="fa fa-mail-forward fa-lg m-r-sm"></i>{{"CONSENT_MANAGEMENT.OPTIONS_7" | translate}}</h4>
                     </a>
                     <a href="#" class="list-group-item" ng-click="manageConsentModalVm.setOption('tryMyPolicy')">
-                        <h4><i class="fa fa-gear fa-lg m-r-sm"></i>Try My Consent Settings against My Medical Record before
-                        Sharing</h4>
+                        <h4><i class="fa fa-gear fa-lg m-r-sm"></i>{{"CONSENT_MANAGEMENT.OPTIONS_3" | translate}}</h4>
                     </a>
                     <a href="#" class="list-group-item" ng-click="manageConsentModalVm.setOption('delete')">
-                        <h4><i class="fa fa-trash-o fa-lg m-r-sm"></i>Delete This Consent</h4>
+                        <h4><i class="fa fa-trash-o fa-lg m-r-sm"></i>{{"CONSENT_MANAGEMENT.OPTIONS_8" | translate}}</h4>
                     </a>
                 </div>
             </div>
@@ -36,7 +35,7 @@
             </c2s-consent-try-policy-dropdown>
 
             <div ng-if="manageConsentModalVm.option === 'delete'">
-                <h3 class="text-center">Are you sure you want to delete this consent?</h3>
+                <h3 class="text-center">{{"CONSENT_MANAGEMENT.OPTIONS_8_CONTENT" | translate}}</h3>
             </div>
         </div>
         <div class="modal-footer">
