--- a/client/app/consent/directives/consentModalFooter.html
+++ b/client/app/consent/directives/consentModalFooter.html
@@ -1,14 +1,14 @@
 <div ng-if="consentModalFooterVm.option === 'delete'">
     <button type="button" class="btn btn-white m-r-xs"
-            ng-click="consentModalFooterVm.setoption({option: 'manageConcent'})">Cancel
+            ng-click="consentModalFooterVm.setoption({option: 'manageConcent'})">{{"CONSENT_MANAGEMENT.CONSENT_CREATE_3" | translate}}
     </button>
-    <button type="button" class="btn btn-primary" ng-click="consentModalFooterVm.deleteconsent()">Delete</button>
+    <button type="button" class="btn btn-primary" ng-click="consentModalFooterVm.deleteconsent()">{{"CONSENT_MANAGEMENT.CONSENT_MODAL_FOOTER_1" | translate}}</button>
 
 </div>
 <div ng-if="consentModalFooterVm.option === 'tryMyPolicy'">
     <button type="button" class="btn btn-white m-r-xs"
-            ng-click="consentModalFooterVm.setoption({option: 'manageConcent'})">Back to Consent Options
+            ng-click="consentModalFooterVm.setoption({option: 'manageConcent'})">{{"CONSENT_MANAGEMENT.CONSENT_MODAL_FOOTER_2" | translate}}
     </button>
-    <button type="button" class="btn btn-primary dark-green" ng-click="consentModalFooterVm.applytrymypolicy()">Apply
+    <button type="button" class="btn btn-primary dark-green" ng-click="consentModalFooterVm.applytrymypolicy()">{{"CONSENT_MANAGEMENT.CONSENT_MODAL_FOOTER_3" | translate}}
     </button>
 </div>
