--- a/client/app/consent/directives/consentRevocationPreviewAttestationModal.html
+++ b/client/app/consent/directives/consentRevocationPreviewAttestationModal.html
@@ -1,6 +1,6 @@
 <div class="inmodal" ng-form>
     <div class="modal-header">
-        <h4 class="modal-title">Successfully Revoked Consent</h4>
+        <h4 class="modal-title">{{"CONSENT_MANAGEMENT.REVOCATION_REVIEW_1" | translate}}</h4>
     </div>
     <div class="modal-body">
         <div class="row">
@@ -8,12 +8,12 @@
                 <span>
                     <button class="btn btn-primary dark-green"
                             ng-click="attestedConsentRevocationModalVm.downloadAttestedConsentRevocationAndRedirectToConsentList()">
-                        Download Signed Consent Revocation
+                        {{"CONSENT_MANAGEMENT.REVOCATION_REVIEW_2" | translate}}
                     </button>
                 </span>
                 <span>
                     <button class="btn btn-white m-r" ui-sref="fe.consent.list">
-                        Continue
+                        {{"CONSENT_MANAGEMENT.CONSENT_ESIGNATURE_24" | translate}}
                     </button>
                 </span>
             </div>
