--- a/client/app/core/services/notify.html
+++ b/client/app/core/services/notify.html
@@ -9,7 +9,7 @@
 
         <button type="button" class="cg-notify-close" ng-click="$close()">
             <span aria-hidden="true">&times;</span>
-            <span class="cg-notify-sr-only">Close</span>
+            <span class="cg-notify-sr-only">{{"CONSENT_MANAGEMENT.E_REVOKE_CONTENTS_2" | translate}}</span>
         </button>
     </div>
 </div>
