--- a/client/app/healthInformation/controllers/healthInformation.html
+++ b/client/app/healthInformation/controllers/healthInformation.html
@@ -1,6 +1,6 @@
 ﻿<div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-sm-10 ">
-        <h2>Health Information</h2>
+        <h2>{{"HEALTH_INFORMATION" | translate}}</h2>
     </div>
 </div>
 
@@ -8,10 +8,10 @@
     <div class="col-xs-7 col-sm-6">
         <div class="pull-left">
             <button class="btn btn-sm btn-primary dark-green" type="button"
-                    ng-click="healthInformationVm.expandAllAccordions()">Expand All
+                    ng-click="healthInformationVm.expandAllAccordions()">{{"HEALTH_INFORMATION_DOC.CONTENTS_1" | translate}}
             </button>
             <button class="btn btn-sm btn-primary dark-green" type="button"
-                    ng-click="healthInformationVm.collapseAllAccordions()">Collapse All
+                    ng-click="healthInformationVm.collapseAllAccordions()">{{"HEALTH_INFORMATION_DOC.CONTENTS_2" | translate}}
             </button>
         </div>
     </div>
@@ -26,7 +26,7 @@
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
-            <strong> No document was retrieved.</strong>
+            <strong>{{"HEALTH_INFORMATION_DOC.CONTENTS_3" | translate}}</strong>
         </div>
     </div>
 </div>
