--- a/client/app/home/controllers/home.html
+++ b/client/app/home/controllers/home.html
@@ -1,6 +1,6 @@
 ﻿<div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-sm-10">
-        <h1>Home</h1>
+        <h1>{{"HOME_LINK" | translate}}</h1>
     </div>
     <div class="col-sm-2"></div>
 </div>
@@ -14,9 +14,8 @@
                         aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <strong>Welcome to
-                    <span ng-bind="homeVm.brandName"></span>! You are now ready to access and view your
-                    health information.
+                <strong>{{"WELCOME.CONTENTS_1" | translate}}
+                    <span ng-bind="homeVm.brandName"></span>{{"WELCOME.CONTENTS_2" | translate}}
                 </strong>
             </div>
         </div>
@@ -28,7 +27,7 @@
                 <p>
                     <a class="btn btn-primary dark-green"
                        ui-sref="fe.patient.healthinformation({scrollTo:'none',expand:'none' })">
-                        <span class="hidden-xs">My </span>Health Information
+                        <span class="hidden-xs">{{"MY_HEALTH_INFORMATION" | translate}} </span>
                     </a>
                 </p>
             </div>
@@ -36,94 +35,78 @@
         <div class="col-sm-6">
             <h2 class="custom-no-margin-top">
                 <i class="fa fa-life-saver"></i>
-                Additional help
+                {{"ADDITIONAL_HELP" | translate}}
             </h2>
             <div class="ibox float-e-margins margin-bottom-10">
                 <div class="ibox-title ibox-heading ibox-rounded">
-                    <h3>General Health Information</h3>
+                    <h3>{{"GENERAL_HEALTH_INFORMATION" | translate}}</h3>
                     <div c2s-ibox-tools></div>
                 </div>
                 <div class="ibox-content">
                     <div class="feed-activity-list">
                         <div class="feed-element">
-                            <a href="http://www.nlm.nih.gov/medlineplus/healthtopics.html">Health Topics
+                            <a href="http://www.nlm.nih.gov/medlineplus/healthtopics.html">{{"HEALTH_TOPICS.TITLE" | translate}}
                                 <i class="fa fa-external-link"></i>
                             </a>
-                            <p>This NIH website provides information on health, wellness, disorders,
-                                and conditions for more than 900 health topics.</p>
+                            <p>{{"HEALTH_TOPICS.CONTENTS" | translate}}</p>
                         </div>
                         <div class="feed-element">
-                            <a href="http://www.va.gov/health/">Veterans Health Administration Website
+                            <a href="http://www.va.gov/health/">{{"VETERANS_HEALTH_ADMINISTRATION_WEBSITE.TITLE" | translate}}
                                 <i class="fa fa-external-link"></i>
                             </a>
-                            <p>The Veterans Health Administration website provides a wealth of
-                                information regarding innumerable health topics, including mental health,
-                                women’s health, polytrauma, HIV, spinal cord injury, and more.</p>
+                            <p>{{"VETERANS_HEALTH_ADMINISTRATION_WEBSITE.CONTENTS" | translate}}</p>
                         </div>
                         <div class="feed-element">
                             <a href="http://www.nlm.nih.gov/medlineplus/videosandcooltools.html"
-                               target="_blank">Videos and Tools
+                               target="_blank">{{"VIDEOS_AND_TOOLS.TITLE" | translate}}
                                 <i class="fa fa-external-link"></i>
                             </a>
-                            <p>Discover health videos on anatomy and body systems and how diseases and
-                                conditions affect them, health check tools and calculators, and
-                                health-related games and quizzes at this NIH website.</p>
+                            <p>{{"VIDEOS_AND_TOOLS.CONTENTS" | translate}}</p>
                         </div>
                         <div class="feed-element">
-                            <a href="http://www.nlm.nih.gov/medlineplus/encyclopedia.html">Medical Encyclopedia
+                            <a href="http://www.nlm.nih.gov/medlineplus/encyclopedia.html">{{"MEDICAL_ENCYCLOPEDIA.TITLE" | translate}}
                                 <i class="fa fa-external-link"></i>
                             </a>
-                            <p>The Medline Plus medical encyclopedia includes more than 4,000
-                                articles about diseases,tests, symptoms, injuries, and surgeries.</p>
+                            <p>{{"MEDICAL_ENCYCLOPEDIA.CONTENTS" | translate}}</p>
                         </div>
                         <div class="feed-element">
                             <a href="http://nihseniorhealth.gov/"
-                               target="_blank">NIH Senior Health
+                               target="_blank">{{"NIH_SENIOR_HEALTH.TITLE" | translate}}
                                 <i class="fa fa-external-link"></i>
                             </a>
-                            <p>An NIH website designed to meet the needs of older adults. Seniors
-                                and caregivers can find information on selected topics in an easy-to-read format.</p>
+                            <p>{{"NIH_SENIOR_HEALTH.CONTENTS" | translate}}</p>
                         </div>
                         <div class="feed-element">
-                            <a href="http://womenshealthresources.nlm.nih.gov/">Women’s Health Resources
+                            <a href="http://womenshealthresources.nlm.nih.gov/">{{"WOMEN_HEALTH_RESOURCE.TITLE" | translate}}
                                 <i class="fa fa-external-link"></i>
                             </a>
-                            <p>An NIH website that provides a wealth of women’s health information,
-                                including substance abuse, autoimmune diseases, bone and joint health,
-                                cancer, exercise and fitness, heart disease, menopausal hormone therapy,
-                                reproductive health, violence against women, and more.</p>
+                            <p>{{"WOMEN_HEALTH_RESOURCE.CONTENTS" | translate}}</p>
                         </div>
                         <div class="feed-element">
                             <a href="http://www.nlm.nih.gov/medlineplus/populationgroups.html">
-                                Population-Specific Health Information
+                                {{"POPULATION_SPECIFIC_HEALTH_INFORMATION.TITLE" | translate}}
                                 <i class="fa fa-external-link"></i>
                             </a>
-                            <p>An NIH website that provides health-related information for population
-                                groups, including children, adolescents, women, seniors, Gulf War Veterans,
-                                numerous ethnicities, and more.</p>
+                            <p>{{"POPULATION_SPECIFIC_HEALTH_INFORMATION.CONTENTS" | translate}}</p>
                         </div>
                         <div class="feed-element">
-                            <a href="http://www.nlm.nih.gov/services/doctor.html">Find a Doctor or Information
-                                About a Doctor
+                            <a href="http://www.nlm.nih.gov/services/doctor.html">{{"FIND_A_DOCTOR.TITLE" | translate}}
                                 <i class="fa fa-external-link"></i>
                             </a>
-                            <p>An NIH website with resources for individuals trying to find a doctor or information
-                                about a doctor.</p>
+                            <p>{{"FIND_A_DOCTOR.CONTENTS" | translate}}</p>
                         </div>
                         <div class="feed-element">
-                            <a href="http://www.nlm.nih.gov/medlineplus/webeval/webeval.html">Evaluating Internet
-                                Health Information
+                            <a href="http://www.nlm.nih.gov/medlineplus/webeval/webeval.html">{{"EVALUATING_INTERNET_HEALTH_INFORMATION.TITLE" | translate}}
                                 <i class="fa fa-external-link"></i>
                             </a>
-                            <p>This tutorial from the National Library of Medicine teaches you how to evaluate the
-                                health information that you find on the internet.</p>
+                            <p>{{"EVALUATING_INTERNET_HEALTH_INFORMATION.CONTENTS" | translate}}</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="ibox float-e-margins margin-bottom-10">
                 <div class="ibox-title ibox-heading">
-                    <h3>Prescription and Over-the-Counter Medications</h3>
+                    <h3>{{"PRESCRIPTION.TITLE" | translate}}</h3>
                     <div c2s-ibox-tools>
                     </div>
                 </div>
@@ -131,42 +114,38 @@
                     <div class="feed-activity-list">
                         <div class="feed-element">
                             <a href="http://www.nlm.nih.gov/medlineplus/druginformation.html"
-                               target="_blank">Drugs and Supplements
+                               target="_blank">{{"PRESCRIPTION.OPTIONS_1" | translate}}
                                 <i class="fa fa-external-link"></i>
                             </a>
-                            <p>This NIH website provides information about prescription medications,
-                                over-the-counter medicines, herbs, and supplements. Includes information
-                                on side effects, dosage, special precautions, and more.</p>
+                            <p>{{"PRESCRIPTION.OPTIONS_1_CONTENTS" | translate}}</p>
                         </div>
                         <div class="feed-element">
                             <a href="http://druginfo.nlm.nih.gov/drugportal/drugportal.jsp"
-                               target="_blank">Drug Information Portal
+                               target="_blank">{{"PRESCRIPTION.OPTIONS_2" | translate}}
                                 <i class="fa fa-external-link"></i>
                             </a>
-                            <p>An NIH website that provides quick access to high quality drug information.</p>
+                            <p>{{"PRESCRIPTION.OPTIONS_2_CONTENTS" | translate}}</p>
                         </div>
                         <div class="feed-element">
                             <a href="http://dailymed.nlm.nih.gov/dailymed/index.cfm"
-                               target="_blank">DailyMed
+                               target="_blank">{{"PRESCRIPTION.OPTIONS_3" | translate}}
                                 <i class="fa fa-external-link"></i>
                             </a>
-                            <p>This NIH website contains more than 75,000 FDA-approved medication labels that are
-                                included in drug packages.</p>
+                            <p>{{"PRESCRIPTION.OPTIONS_3_CONTENTS" | translate}}</p>
                         </div>
                         <div class="feed-element">
                             <a href="http://www.dsld.nlm.nih.gov/dsld/"
-                               target="_blank">Dietary Supplement Label Database
+                               target="_blank">{{"PRESCRIPTION.OPTIONS_4" | translate}}
                                 <i class="fa fa-external-link"></i>
                             </a>
-                            <p>This NIH website contains the full label contents from dietary supplement products
-                                marketed in the United States.</p>
+                            <p>{{"PRESCRIPTION.OPTIONS_4_CONTENTS" | translate}}</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="ibox float-e-margins margin-bottom-10">
                 <div class="ibox-title ibox-heading">
-                    <h3>Mental Health and Substance Abuse</h3>
+                    <h3>{{"MENTAL_HEALTH_AND_SUBSTANCE_ABUSE.TITLE" | translate}}</h3>
                     <div c2s-ibox-tools>
                     </div>
                 </div>
@@ -174,29 +153,24 @@
                 <div class="ibox-content">
                     <div class="feed-activity-list">
                         <div class="feed-element">
-                            <a href="http://store.samhsa.gov/">SAMHSA Store
+                            <a href="http://store.samhsa.gov/">{{"MENTAL_HEALTH_AND_SUBSTANCE_ABUSE.OPTIONS_1" | translate}}
                                 <i class="fa fa-external-link"></i>
                             </a>
-                            <p>The SAMHSA Store provides thousands of brochures, guides, monographs, and other
-                                publications on a wide variety of topics related to substance abuse and
-                                mental health treatment, prevention, and recovery.</p>
+                            <p>{{"MENTAL_HEALTH_AND_SUBSTANCE_ABUSE.OPTIONS_1_CONTENTS" | translate}}</p>
                         </div>
                         <div class="feed-element">
                             <a href="http://www.mentalhealth.gov/"
-                               target="_blank">MentalHealth.Gov
+                               target="_blank">{{"MENTAL_HEALTH_AND_SUBSTANCE_ABUSE.OPTIONS_2" | translate}}
                                 <i class="fa fa-external-link"></i>
                             </a>
-                            <p>This Department of Health & Human Services website provides information about mental
-                                health, mental illness, treatment, recovery, and resources.</p>
+                            <p>{{"MENTAL_HEALTH_AND_SUBSTANCE_ABUSE.OPTIONS_2_CONTENTS" | translate}}</p>
                         </div>
                         <div class="feed-element">
                             <a href="http://www.nami.org/"
-                               target="_blank">National Alliance on Mental Illness Website
+                               target="_blank">{{"MENTAL_HEALTH_AND_SUBSTANCE_ABUSE.OPTIONS_3" | translate}}
                                 <i class="fa fa-external-link"></i>
                             </a>
-                            <p>The National Alliance on Mental Illness (NAMI) website provides educational information
-                                on most mental illness disorders as well as resources for people with mental illness and
-                                their families.</p>
+                            <p>{{"MENTAL_HEALTH_AND_SUBSTANCE_ABUSE.OPTIONS_3_CONTENTS" | translate}}</p>
                         </div>
                     </div>
                 </div>
