--- a/client/app/medicalDocuments/directives/medicalDocumentDeleteModal.html
+++ b/client/app/medicalDocuments/directives/medicalDocumentDeleteModal.html
@@ -1,17 +1,17 @@
 <div class="inmodal">
     <div class="modal-header">
-        <h4 class="modal-title">Delete Medical Document</h4>
+        <h4 class="modal-title">{{"MEDICAL_DOC_MANAGEMENT.DELETE_CONTENTS_1" | translate}}</h4>
     </div>
     <div class="modal-body">
         <p>
-            Are you sure you want to delete <span ng-bind="medicalDocumentModalDeleteVm.medicalDocument.name"></span>
-            document?
+            {{"MEDICAL_DOC_MANAGEMENT.DELETE_CONTENTS_2" | translate}} <span ng-bind="medicalDocumentModalDeleteVm.medicalDocument.name"></span>
+            {{"MEDICAL_DOC_MANAGEMENT.DELETE_CONTENTS_3" | translate}}
         </p>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-white" ng-click="medicalDocumentModalDeleteVm.cancel()">Cancel</button>
+        <button type="button" class="btn btn-white" ng-click="medicalDocumentModalDeleteVm.cancel()">{{"MEDICAL_DOC_MANAGEMENT.DELETE_CONTENTS_4" | translate}}</button>
         <button type="button" class="btn btn-primary dark-green" ng-click="medicalDocumentModalDeleteVm.delete()">
-            Delete
+            {{"MEDICAL_DOC_MANAGEMENT.DELETE_CONTENTS_5" | translate}}
         </button>
     </div>
 </div>
