--- a/client/app/provider/controllers/providerLookup.html
+++ b/client/app/provider/controllers/providerLookup.html
@@ -1,3 +1,3 @@
-<c2s-content-wrapper contenttitle="Search Providers">
+<c2s-content-wrapper contenttitle="TITLE.SEARCH_PROVIDERS">
     <c2s-provider-lookup-search></c2s-provider-lookup-search>
 </c2s-content-wrapper>
