--- a/client/app/warning-dialog.html
+++ b/client/app/warning-dialog.html
@@ -2,10 +2,10 @@
 <div class="modal-body">
     <div class="row">
         <div class="modal-header">
-            <h3>You're Idle. Do Something!</h3>
+            <h3>{{"WARNING_DIALOG.CONTENTS_1" | translate}}</h3>
         </div>
         <div idle-countdown="countdown" ng-init="countdown=5" class="modal-body">
-            <progressbar max="5" value="5" animate="false" class="progress-striped active">You'll be logged out in {{countdown}} second(s).</progressbar>
+            <progressbar max="5" value="5" animate="false" class="progress-striped active">{{"WARNING_DIALOG.CONTENTS_2" | translate}} {{countdown}} {{"WARNING_DIALOG.CONTENTS_3" | translate}}</progressbar>
         </div>
     </div>
 </div>
